--- a/3_Kayttojarjestelmat/3_1_Linux_asennus.mkd
+++ b/3_Kayttojarjestelmat/3_1_Linux_asennus.mkd
@@ -35,6 +35,45 @@ Linux asennusVmWare-ympäristöön
 14. Ja sitten käynnistetään uusi käyttis ja surffaillaan iltasanomien sivuille...
 
 
+Jatkoa:
+
+* Libreofficen testaus
+* * Writer
+* * Calc
+* * Impress
+
+* Linux käyttöjärjestelmän ylläpito
+* * Päivitykset
+* * Sovellusten asennus
+
+* Linux käyttöjärjestelmän hakemistorakenne
+* * /home
+* * /etc
+* * /var/log
+
+
+* Terminaali / Konsoli / Pääte -käyttö
+* * Konsolikomennot ja niiden käyttö (esimerkiksi: man, sudo, su, chmod, chown, chgrp, top, ps, kill, grep, ls, cp, rm, mv, cd, touch, df, fdisk)
+
+* Konsoli: Bash skriptausta 
+* * Alkutoimet: Tutustu wikiin https://linux.fi/wiki/Bash-skriptaus. 
+* * Linuxissa avaa konsoli. 
+* * Tee tiedosto koodi.sh ja avaa se jollain tekstieditorilla.
+
+
+* * Tee ”Hello World ” Skripti tulostamaan käskystä tekstiä.
+* * Lisää tulostukseen tiedoston nimi ja parametrien tulostus.
+* * Lisää tulostukseen päiväyksen ja kellonajan tulostus.
+* * Lisää laskukone, joka kysyy kaksi lukua ja tulostaa niden summan.
+* * Lisää lukuihin tarkastus että ne ovat varmasti positiivisialukuja (jos yritetään syöttää negatiivisia niin ohjelma kysyy luvun uudestaan)
+
+
+* Terminaali: Ajastettujen toimintojen luonti( cron crontab)
+* * Tee skripti.sh
+* * Skripti kirjoittaa tiedostoon pvm:n ja ajan ja kaikki käyttäjät
+* * Tee crontab -ajastus joka suorittaa skripti.sh :n minuutin välein.
+* * Järjestelmän lokista näkee toiminnan onnistumisen: /var/log/syslog
+ 
 
 
 
