--- a/3_Kayttojarjestelmat/3_1_Linux_asennus.mkd
+++ b/3_Kayttojarjestelmat/3_1_Linux_asennus.mkd
@@ -1,4 +1,4 @@
-Linux asennusVmWare-ympäristöön
+#Linux asennusVmWare-ympäristöön
 
 1. Lataa Linux -image (linuxmint.com tai joku muu linux paketti)
 
@@ -35,7 +35,7 @@ Linux asennusVmWare-ympäristöön
 14. Ja sitten käynnistetään uusi käyttis ja surffaillaan iltasanomien sivuille...
 
 
-Jatkoa:
+##Jatkoa:
 
 * Libreofficen testaus
 * * Writer
@@ -63,24 +63,7 @@ Jatkoa:
 Väliaika(viikko)
 
 
-* Konsoli: Bash skriptausta 
-* * Alkutoimet: Tutustu wikiin https://linux.fi/wiki/Bash-skriptaus. 
-* * Linuxissa avaa konsoli. 
-* * Tee tiedosto koodi.sh ja avaa se jollain tekstieditorilla.
 
-
-* * Tee ”Hello World ” Skripti tulostamaan käskystä tekstiä.
-* * Lisää tulostukseen tiedoston nimi ja parametrien tulostus.
-* * Lisää tulostukseen päiväyksen ja kellonajan tulostus.
-* * Lisää laskukone, joka kysyy kaksi lukua ja tulostaa niden summan.
-* * Lisää lukuihin tarkastus että ne ovat varmasti positiivisialukuja (jos yritetään syöttää negatiivisia niin ohjelma kysyy luvun uudestaan)
-
-
-* Terminaali: Ajastettujen toimintojen luonti( cron crontab)
-* * Tee skripti.sh
-* * Skripti kirjoittaa tiedostoon pvm:n ja ajan ja kaikki käyttäjät
-* * Tee crontab -ajastus joka suorittaa skripti.sh :n minuutin välein.
-* * Järjestelmän lokista näkee toiminnan onnistumisen: /var/log/syslog
  
 
 
