--- a/3_Kayttojarjestelmat/3_2_Linux_ohjelmointi.mkd
+++ b/3_Kayttojarjestelmat/3_2_Linux_ohjelmointi.mkd
@@ -1,30 +1,55 @@
-#Linux Ohjelmointi
+# Linux Ohjelmointi
 
-##Bash-ohjelmointi
-* Konsoli: Bash skriptausta 
-* * Alkutoimet: Tutustu wikiin https://linux.fi/wiki/Bash-skriptaus. 
-* * Linuxissa avaa konsoli. 
-* * Tee tiedosto koodi.sh ja avaa se jollain tekstieditorilla.
+## Bash-ohjelmointi
+### Konsoli: Bash skriptausta 
+* Alkutoimet: [Tutustu wikiin](https://linux.fi/wiki/Bash-skriptaus) 
+* Linuxissa avaa konsoli. 
+* Tee tiedosto koodi.sh ja avaa se jollain tekstieditorilla. 
+* Esimerkisi seuraavat ovat tehokkaita työvälineitä: pico, gedit, kate, emacs, vi. 
+
+* Tee "Hello World" -Skripti tulostamaan käskystä tekstiä.
+* Lisää tulostukseen tiedoston nimi ja parametrien tulostus.
+* Lisää tulostukseen päiväyksen ja kellonajan tulostus.
+* Lisää laskukone, joka kysyy kaksi lukua ja tulostaa niden summan.
+* Lisää lukuihin tarkastus että ne ovat varmasti positiivisialukuja (jos yritetään syöttää negatiivisia niin ohjelma kysyy luvun uudestaan)
 
 
-* * Tee ”Hello World ” Skripti tulostamaan käskystä tekstiä.
-* * Lisää tulostukseen tiedoston nimi ja parametrien tulostus.
-* * Lisää tulostukseen päiväyksen ja kellonajan tulostus.
-* * Lisää laskukone, joka kysyy kaksi lukua ja tulostaa niden summan.
-* * Lisää lukuihin tarkastus että ne ovat varmasti positiivisialukuja (jos yritetään syöttää negatiivisia niin ohjelma kysyy luvun uudestaan)
-
-
-* Terminaali: Ajastettujen toimintojen luonti( cron crontab)
-* * Tee skripti.sh
-* * Skripti kirjoittaa tiedostoon pvm:n ja ajan ja kaikki käyttäjät
-* * Tee crontab -ajastus joka suorittaa skripti.sh :n minuutin välein.
-* * Järjestelmän lokista näkee toiminnan onnistumisen: /var/log/syslog
+### Terminaali: Ajastettujen toimintojen luonti( cron crontab)
+* Tee skripti.sh
+* Skripti kirjoittaa tiedostoon pvm:n ja ajan ja kaikki käyttäjät
+* Tee crontab -ajastus joka suorittaa skripti.sh :n minuutin välein.
+* Järjestelmän lokista näkee toiminnan onnistumisen: /var/log/syslog
 
 
 ##Ohjelmointityökalut
 
 Tavoitteena kokeilla ohjelmointityökalujen toiminta Linuxin konsolissa.
 
+### Python
+* Versio?
+* Tee hello.py -sovellus: print(“Terve maailma”);
+* Aja komento python hello.py
+* Muuta sovellusta niin, että ./hello.py -komento toimii...
+* Viopesta lisää ohjelmointi harjoituksia
+
+###C++
+* Asenna työkalut Linuxiin
+* g++ paketti sisältää kääntäjän ja työkalut 
+* Tee helloworld.cpp ohjelma
+* Käännä se: g++ helloworld.cpp → lopputuloksena a.out tiedosto
+* Aja sovellus: ./a.out
+*  Viopesta lisää ohjelmointi harjoituksia
+
+###Git
+* Asenna työkalut - asennus konsolista.
+* Luo tunnus Github.com palveluun - jos ei vielä ole...
+* Luo repository(projekti) Github:com :ssä
+* Hae repositori github.com :sta clone-komennolla
+* Koodaa pari tiedostoa
+* Testaa sovellus
+* Aja commit komennolla versiomuutos versiohallintaan
+* push -komennolla uusi versio github.com:iin
+* Katsele Github :ssa onnistuiko
 
 
 
